<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails">

<ImageView
    android:id="@+id/iv_product_image"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:scaleType="centerCrop"
    android:src="@drawable/clothes"
    android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_product_image"
        android:text="@string/product_name"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/tvProductName"/>

    <TextView
        android:id="@+id/tvProductCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/clothes"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvProductName"
        app:layout_constraintTop_toBottomOf="@id/tvProductName" />

    <ImageView
        android:id="@+id/circle_shape"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/shape_circle"
        app:layout_constraintBottom_toBottomOf="@id/tvProductCategory"
        app:layout_constraintStart_toEndOf="@id/tvProductCategory"
        app:layout_constraintTop_toTopOf="@id/tvProductCategory" />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/_10_taka"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/circle_shape"
        app:layout_constraintStart_toEndOf="@id/circle_shape"
        app:layout_constraintTop_toTopOf="@id/circle_shape" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProductPrice"
        android:text="@string/text_description"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/tv_description"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:icon="@drawable/ic_add_to_cart"
        app:iconTint="#FFFFFF"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>